--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
         </section>
     </main>
-    <script id='configScript' type='text/javascript' src='config.js'></script>
+    <!-- <script id='configScript' type='text/javascript' src='config.js'></script> -->
     <script src="script.js"></script>
 </body>
 </html>
