Added an object for sermon series

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <div id="juboDetails">
             <ul class='deets'>
-                <li>Sunday, January 26th, 2020</li>
-                <li>Sermon Series: Created To Be</li>
-                <li>Title: In Christ</li>
-                <li>Speaker: Pastor Joe Suh</li>
+                <li id='date'></li>
+                <li id='sermonSeries'>Sermon Series: Created To Be</li>
+                <li id='sermonTitle'>Title: In Christ</li>
+                <li id='speakerName'>Speaker: Pastor Joe Suh</li>
             </h2>
         </div>
     </header>
