--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         </div>
         <div id="juboDetails">
             <ul class='deets'>
+                <li id='sermonSlide'></li>
                 <li id='date'></li>
                 <li id='sermonSeries'>Sermon Series: Created To Be</li>
                 <li id='sermonTitle'>Title: In Christ</li>
+                <li id='sermonText'>Text: Romans 6:1-14</li>
                 <li id='speakerName'>Speaker: Pastor Joe Suh</li>
             </h2>
         </div>
