added offeringBlurb and corresponding style

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <div id="linkContainer">
                 <a id='offeringButton' href='https://cash.app/$TheExchangeChurch' target="_blank">Give Offering</a>
             </div>
+            <div id="offeringBlurb">
+                We accept offering via the Square Cash app! Find us at <b>$TheExchangeChurch</b>
+            </div>
             <ul id="bar">
                 <li class='barList'>
                     <a class="barLink" href="#announcements">Announcements<div class="expand">+</div></a>
