fixed livestream div height

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div id="livestream" align = "center">
             	<b style="font-size: 18px">Live Sunday Service March 15</b>
-            	<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fthe.exchange.church%2Fvideos%2F504093196853783%2F&show_text=0&width=560" max-width="480" width= "100%" height="100%" marginwidth="auto" style="border:none;overflow:hidden;padding-bottom: 35px;" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            	<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fthe.exchange.church%2Fvideos%2F504093196853783%2F&show_text=0&width=560" max-width="480" width= "100%" height="100%" marginwidth="auto" style="border:none;overflow:hidden;padding-bottom: 35px;height: 285px;" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
             <div id="linkContainer">
                 <a id='offeringButton' href='https://cash.app/$TheExchangeChurch' target="_blank">Give Offering</a>
