updated sermon info 3/15

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <ul class='deets'>
                 <li id='sermonSlide'></li>
                 <li id='date'></li>
-                <li id='sermonSeries'>Sermon Series: Created To Be</li>
-                <li id='sermonTitle'>Title: In Christ</li>
-                <li id='sermonText'>Text: Romans 6:1-14</li>
+                <li id='sermonSeries'>Sermon Series: Standalone</li>
+                <li id='sermonTitle'>Title: In the Midst of the Storm</li>
+                <li id='sermonText'>Text: Mark 4:35-41</li>
                 <li id='speakerName'>Speaker: Pastor Joe Suh</li>
             </h2>
         </div>
