--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 Thank you for joining us for worship today! If you are a newcomer to The Exchange Church, welcome! We hope that our corporate celebration service is an encouragement to you and that the grace and peace of Christ meet you where you are today. We want to let you know that this is a safe place for you to ask questions, explore truth, and discover the love and power of God together with others.
             </div>
             <div id="livestream" align = "center">
-            	<b style="font-size: 18px">Live Sunday Service March 15</b>
-            	<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fthe.exchange.church%2Fvideos%2F504093196853783%2F&show_text=0&width=560" max-width="480" width= "100%" height="100%" marginwidth="auto" style="border:none;overflow:hidden;padding-bottom: 35px;height: 285px;" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            	<b style="font-size: 18px">Live Sunday Service March 15<br></b>
+            	<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fthe.exchange.church%2Fvideos%2F644797869419115%2F&show_text=1&width=480" max-width="480" width= "100%" height="100%" marginwidth="auto" style="border:none;overflow:hidden;padding-bottom: 35px;height: 335px;" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
             </div>
             <div id="linkContainer">
                 <a id='offeringButton' href='https://cash.app/$TheExchangeChurch' target="_blank">Give Offering</a>
