--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <li id='sermonSlide'></li>
                 <li id='date'></li>
                 <li id='sermonSeries'>Sermon Series: Standalone</li>
-                <li id='sermonTitle'>Title: In the Midst of the Storm</li>
-                <li id='sermonText'>Text: Mark 4:35-41</li>
+                <li id='sermonTitle'>Title: One Thing is Necessary</li>
+                <li id='sermonText'>Text: Luke 10:38 - 42</li>
                 <li id='speakerName'>Speaker: Pastor Joe Suh</li>
             </h2>
         </div>
@@ -34,6 +34,7 @@
             <!-- <div id="livestream" align = "center">
             	<b style="font-size: 18px">Live Sunday Service March 15<br></b>
             	<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fthe.exchange.church%2Fvideos%2F285741352393863%2F&show_text=1&width=480" max-width="480" width= "100%" height="100%" marginwidth="auto" style="border:none;overflow:hidden;padding-bottom: 35px;height: 335px;" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            	
             </div> -->
             <div id="linkContainer">
                 <a id='offeringButton' href='https://cash.app/$TheExchangeChurch' target="_blank">Give Offering</a>
