updated announcements and sermon title for 3/29
added in Zelle in index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
             <div id="offeringBlurb">
                 We accept offering via the Square Cash app! Find us at <b>$TheExchangeChurch</b>
+                <br> or Zelle from your bank app at <b>exchangechurchfinance@gmail.com</b>
             </div>
             <ul id="bar">
                 <li class='barList'>
