updated with worship lyrics 8/9

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 </li>
                 <div class='accordionBody' id="orderBody" style="display: none;"></div>
                 <li class='barList'>
+                    <a class="barLink" href="#worship-lyrics">Worship Lyrics<div class="expand">+</div></a>
+                </li>
+                <div class='accordionBody' id="lyricsBody" style="display: none;"></div>
+                <li class='barList'>
                     <a class="barLink" href="#contact-us">Contact Us<div class="expand">+</div></a>
                 </li>
                 <div class='accordionBody' id="contactBody" style="display: none;"></div>
