--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                     <a class="barLink" href="#order-of-worship">Order of Worship<div class="expand">+</div></a>
                 </li>
                 <div class='accordionBody' id="orderBody" style="display: none;"></div>
-                <li class='barList'>
+                <!--<li class='barList'>
                     <a class="barLink" href="#worship-lyrics">Worship Lyrics<div class="expand">+</div></a>
                 </li>
-                <div class='accordionBody' id="lyricsBody" style="display: none;"></div>
+                <div class='accordionBody' id="lyricsBody" style="display: none;"></div>-->
                 <li class='barList'>
-                    <a class="barLink" href="#contact-us">Contact Us<div class="expand">+</div></a>
+                    <a class="barLink" href="#contact-us">Connect with Us<div class="expand">+</div></a>
                 </li>
                 <div class='accordionBody' id="contactBody" style="display: none;"></div>
             </ul>
